--- a/DSCI_100_proposal.ipynb
+++ b/DSCI_100_proposal.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "source": [
     "\n",
+    "## Title: Classifying the Stage of Heart Disease of Patient's from Cleveland based on Age, Resting Blood Pressure, Cholesterol, Max Heart Rate.\n",
+    "\n",
     "## Background Information\n",
     "\n",
     "Heart disease is one of the leading causes in death across the United States of America. Heart disease can result in a broad range of negative health impacts, and can be caused by a wide variety of factors. Common heart diseases include coronary heart disease, arrhythmias, strokes, etc. Throughout the 21st century, medical professionals have deduced how certain factors may give leeway to one having a certain type of heart disease and the extent of its danger to the human body. In this project, we will try to predict the severity of heart attack given several relevant predictors.\n",
