--- a/DSCI_100_proposal.ipynb
+++ b/DSCI_100_proposal.ipynb
@@ -10,8 +10,7 @@
     "\n",
     "## Background Information\n",
     "\n",
-    "Heart disease is one of the leading causes in death across the United States of America. Heart disease can result in a broad range of negative health impacts, and can be caused by a wide variety of factors. Common heart diseases include coronary heart disease, arrhythmias, strokes, etc. Throughout the 21st century, medical professionals have deduced how certain factors may give leeway to one having a certain type of heart disease and the extent of its danger to the human body. In this project, we will try to predict the severity of heart attack given several relevant predictors.\n",
-    "\n",
+    "Heart disease is one of the leading causes in death across the United States of America. Heart disease can result in a broad range of negative health impacts, and can be caused by a wide variety of factors. Common heart diseases include coronary heart disease, arrhythmias, strokes, etc. Throughout the 21st century, medical professionals have deduced how certain factors may give leeway to one having a certain type of heart disease and the extent of its danger to the human body. In this project, we will try to predict the severity of heart attack given several relevant predictors. The dataset being used is a collection of patients from Cleveland, Ohio, all of whom were suspected to have heart disease. The dataset contains 76 attributes which act as predictors as to the severity of one’s heart disease. For the purpose of this investigation, only age, cholesterol, number of vessels coloured, resting blood pressure, and max heart rate will be used to predict the severity of heart disease. The class being used determines if the patient is classified as either healthy, moderate or severe in regards to their health. \n",
     "\n",
     "Research Question: How can age, resting bp, chol, and chest pain be used to determine the stage of heart disease of patients from Cleveland?"
    ]
