--- a/DSCI_100_proposal.ipynb
+++ b/DSCI_100_proposal.ipynb
@@ -4103,12 +4103,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7668db63-8055-4369-a840-c5b288534309",
+   "cell_type": "markdown",
+   "id": "909655ce-c1d0-46f0-a0f2-3d32b7183b1f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Expected Outcomes and significance \n",
+    "\n",
+    "We expect to find that older patients, patients with higher heart rate, patients with higher cholesterol levels, patients with higher max heart rate, patients with more than 3 vessels colored, and patients with type 4 chest pain, are more likely to have a more severe stage of heart disease. In general, older patients and patients with higher cholesterol are more at risk of heart disease; additionally, when we were discovering which factors correlate the most with higher stage heart disease, we found that these other factors are essential. \n",
+    "\n",
+    "If we figure out the correlation, then we might be able to diagnose patients with heart disease earlier, thus allowing us to take early action and prevention to treat heart disease. This could lead to autonomous diagnoses of disease, where people can run tests for themselves to figure out if they are more at risk of heart disease, without necessarily needing the presence of a doctor, which can be both expensive and time consuming. Additionally, having a second automated process to double check diagnoses can help catch missed cases.\n",
+    "\n",
+    "How can we use commonly accessible factors to ensure earlier detection of late stage severe cases of heart disease? Which factors are most important when looking into the correlation between heart disease? \n"
+   ]
   },
   {
    "cell_type": "code",
