--- a/DSCI100_Group30_Report.ipynb
+++ b/DSCI100_Group30_Report.ipynb
@@ -5,29 +5,41 @@
    "id": "dd9992a9-d85b-486d-b5bf-efbe0c8394a1",
    "metadata": {},
    "source": [
-    "# Title"
+    "\n",
+    "# Title: Classifying the Stage of Heart Disease of Patient's from Cleveland based on Age, Resting Blood Pressure, Cholesterol, and Max Heart Rate.\n",
+    "\n",
+    "## Group 30: Toby Lau, Neil Lin, Tanish Gupta, Kristy Fielding\n",
+    "\n",
+    "### Background Information & Introduction\n",
+    "\n",
+    "Heart disease is one of the leading causes of death across the United States of America that is caused by a wide variety of factors. Common heart diseases include coronary heart disease, arrhythmias, strokes, etc. Throughout the 21st century, medical professionals have deduced how certain factors may give leeway to one having a certain type of heart disease and the extent of its danger to the human body (Centers for Disease Control and Prevention, 2023). In this project, we will try to predict the severity of a patient's heart disease given the relevant predictors. The dataset being used is a collection of patients from Cleveland, Ohio, all of whom were suspected to have heart disease. The dataset contains 14 attributes that could contribute to the severity of one’s heart disease. Of the 14, we hope to train a model that is able to classify these stages given some attributes.\n",
+    "\n",
+    "**Research Question: How can age, resting blood pressure, cholesterol, and max heart rate determine the stage of heart disease of patients from Cleveland?**"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a1cb8144-b51e-4f40-a3e3-39248f07cdc7",
-   "metadata": {},
-   "source": [
-    "## Introduction"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "32541a54-35f2-4011-9d17-ca122233d95e",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "559e1dc6-47dd-4fe1-abb4-77783df76924",
    "metadata": {},
    "source": [
-    "## Methods and Results"
+    "## Methods\n",
+    "To obtain a high quality model trained on the data used, we will have to do some data preprocessing and model tuning.\n",
+    "\n",
+    "### Data reading and wrangling\n",
+    "1. Import the required libraries and load the dataset from the web\n",
+    "2. Assign column names and types to the dataset\n",
+    "3. Wrangle the dataset into a tidy format.\n",
+    "4. Split the data into training and testing sets\n",
+    "5. Summarize and visualize data\n",
+    "\n",
+    "### Hyperparameter Tuning\n",
+    "1. \n",
+    "\n",
+    "### Creating the optimal model\n",
+    "\n",
+    "### Testing\n",
+    "\n",
+    "### Evaluating\n"
    ]
   },
   {
