completed methods section

--- a/DSCI100_Group30_Report.ipynb
+++ b/DSCI100_Group30_Report.ipynb
@@ -33,13 +33,20 @@
     "5. Summarize and visualize data\n",
     "\n",
     "### Hyperparameter Tuning\n",
-    "1. \n",
+    "1. Set a seed.\n",
+    "2. Create a recipe that defines the \"stage\" column as our response variable and everything else as its predictors.\n",
+    "3. Scale, center, and upscale the data using the SMOTE algorithm.\n",
+    "4. Create a $k$-nn model  with the neighbors = tune() parameter.\n",
+    "5. Create a tibble with a single neighbors column containing numbers from 1 to ???.\n",
+    "6. Perform Cross-validation ...\n",
+    "7. Plot the accuracy of the model against the number of neighbors to determine the $k$ value with the highest accuracy.\n",
+    "8. Using the $k$ value that obtained the highest accuracy, create a new $k$-nn model\n",
     "\n",
-    "### Creating the optimal model\n",
-    "\n",
-    "### Testing\n",
-    "\n",
-    "### Evaluating\n"
+    "### Evaluating\n",
+    "1. Test the model using our testing data set.\n",
+    "2. Check for over/underfitting.\n",
+    "3. Create a confusion matrix\n",
+    "4. Assess the model's performance using tidymodels.\n"
    ]
   },
   {
