Finalized references section

--- a/DSCI100_Group30_Report.ipynb
+++ b/DSCI100_Group30_Report.ipynb
@@ -278,13 +278,13 @@
     "options(repr.plot.width = 7, repr.plot.height=5)\n",
     "\n",
     "data_clean <- data_clean |> \n",
-    "    mutate(stage = cut(num, breaks=c(-Inf,0,4), labels=c(\"Mild\",\"Moderate/Severe\")))\n",
+    "    mutate(stage = cut(num, breaks=c(-Inf,0,4), labels=c(\"Mild\", \"Moderate/Severe\")))\n",
     "head(data_clean)\n",
     "\n",
     "data_clean_summary <- data_clean |> \n",
     "    group_by(stage) |> \n",
     "    summarize(count = n()) |> \n",
-    "    ggplot(aes(stage,count)) +\n",
+    "    ggplot(aes(stage, count)) +\n",
     "    geom_bar(stat = \"identity\") +\n",
     "    labs(x = \"Stage of Heart Disease\", y = \"Number of Observations\") +\n",
     "    ggtitle(\"Figure 6: Number of observations per Factor in Stage Column\")\n",
@@ -674,18 +674,14 @@
   {
    "cell_type": "markdown",
    "id": "161d4169-b0e9-4307-9451-3bc64de5e6c6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "## Discussion"
+    "## Discussion\n",
+    "\n",
+    "In summary, we found that we can predict the severity of heart disease with several predictors, with an accuracy of about 65%. We also tested our predictor on other datasets, which resulted in a slightly higher accuracy of 80%. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c49ba69-47c4-4d69-abc4-15c150ea47d9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -700,7 +696,11 @@
    "id": "cf2c7c66-3c33-45ac-94c2-79445dc3335c",
    "metadata": {},
    "source": [
-    "Carotid artery stenosis: Causes, symptoms and treatment. (n.d.). Cleveland Clinic. https://my.clevelandclinic.org/health/diseases/16845-carotid-artery-disease-carotid-artery-stenosis"
+    "Carotid artery stenosis: Causes, symptoms and treatment. (n.d.). Cleveland Clinic. https://my.clevelandclinic.org/health/diseases/16845-carotid-artery-disease-carotid-artery-stenosis\n",
+    "\n",
+    "Janosi, A., Steinbrunn, W., Pfisterer, M., & Detrano, R. (n.d.). Heart Disease - UCI Machine Learning Repository. UC Irvine Machine Learning Repository. https://archive.ics.uci.edu/dataset/45/heart+disease \n",
+    "\n",
+    "Centers for Disease Control and Prevention. (2023, May 15). Heart disease facts. Centers for Disease Control and Prevention. https://www.cdc.gov/heartdisease/facts.htm "
    ]
   }
  ],
