Added ~ 300 words to discussion and rest of notebook
A

--- a/DSCI100_Group30_Report.ipynb
+++ b/DSCI100_Group30_Report.ipynb
@@ -674,13 +674,28 @@
   {
    "cell_type": "markdown",
    "id": "161d4169-b0e9-4307-9451-3bc64de5e6c6",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
-    "## Discussion\n",
+    "## Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18af35dc-5d79-4d66-b9b8-3e79ef3060e7",
+   "metadata": {},
+   "source": [
+    "### Summary of findings\n",
     "\n",
-    "In summary, we found that we can predict the severity of heart disease with several predictors, with an accuracy of about 65%. We also tested our predictor on other datasets, which resulted in a slightly higher accuracy of 80%. "
+    "In summary, we found that we can predict the severity of heart disease with several predictors, with an accuracy of about 65%. We also tested our predictor on other datasets, which resulted in a slightly higher accuracy of 80%. In terms of precision and recall, the model performed okay on both. Since the model has a relatively low training and cross validation score, we can say that the best way to improve the model would probably be to increase the complexity of the model, because as of now it's not capturing all the complexity in the dataset.\\\n",
+    "\n",
+    "### Expected findings\n",
+    "We expected to find that the model would be able to account for a greater amount of variation in the dataset. One possible reason why it's not doing the best could be because we didn't include all the features or because we simplified the target label (reducing it to binary classification when we could've done multi-class classification). \n",
+    "\n",
+    "### Future impact\n",
+    "If we can find a correlation between various factors and heart disease, this could impact future diagnosis, making the process faster and more accurate. A developed diagnosis pipeline could remove the need for a human doctor, which can be time consuming and expensive. Although the model isn't very accurate right now, a more complex model or a greater amount of data could lead to this model being available online for public use, allowing patients who are at risk for heart disease to find out sooner and with less hassle.\n",
+    "\n",
+    "### Future questions\n",
+    "How can we increase the accuracy of the model, and how can this help patients with heart disease?"
    ]
   },
   {
