made some changes

--- a/DSCI100_Group30_Report.ipynb
+++ b/DSCI100_Group30_Report.ipynb
@@ -8158,7 +8158,7 @@
     "Figure 14\\\n",
     "Based on the metrics above, our model was only somewhat accurate when used against our testing set. It obtained an accuracy of 67.4%, which is almost the desired 70% model accuracy usually aimed for. Furthermore, the model obtained a precision of 72% and recall of 71% when identifying the \"Mild\" class which is satisfactory but not high enough to be put in practice. Meanwhile, the model obtained a precision of 60% and recall of 61% when identifying the \"Moderate/Severe\" class which is not as good as we would like. Overall, these results show that the model is not accurate or precise enough to be put into practice. Especially in an area that deals with the safety and wellbeing of other individuals. Neverthekess, the model performed equally well when classifying both classes meaning our model did not suffer from bias. This is most likely due to the upsampling performed in the recipe.\n",
     "\n",
-    "The model could most likely be used as an additional step in the diagnosis of heart disease"
+    "The model could most likely be used as an additional step in the diagnosis of heart disease in addition to a diagnosis by a human, for example, to get a second opinion or to double check."
    ]
   },
   {
