--- a/DSCI100_Group30_Report.ipynb
+++ b/DSCI100_Group30_Report.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Diagnosing Heart Disease of Patient's based on Age, Resting Blood Pressure, Cholesterol, and Max Heart Rate.\n",
+    "# Diagnosing Heart Disease in Patients based on Age, Resting Blood Pressure, Cholesterol, and Max Heart Rate.\n",
     "\n",
     "## Group 30: Toby Lau, Neil Lin, Tanish Gupta, Kristy Fielding\n",
     "\n",
@@ -258,7 +258,7 @@
     "Figure 5\\\n",
     "Unfortunately, according to figure 5, our dataset is extremely imbalanced. So we've decided to create a new class that merges values of num from 1 to 4. \n",
     "\n",
-    "According to the data source, values of 0 in the num column represent patients with <50% vessel diameter narrowing while values > 0 in the num column represent patients with >50% vessel diameter narrowing. Since mild heart disease is classified as <50% narrowing, moderate heart disease is classified as 50-80% narrowing, and severe heart disease is 80-100% narrowing (Cleveland Clinic). We can bucket the \"num\" values into respective \"mild\", \"moderate\", and \"severe\" classes into a new \"stage\" column. However, due to the class imbalance, we have decided to combine the \"moderate\" and \"severe\" classes. This corresponds to num values of 1-4. The following table represents how the new \"stage\" column relates to \"num\".\n",
+    "According to the data source, values of 0 in the num column represent patients with <50% vessel diameter narrowing while values > 0 in the num column represent patients with >50% vessel diameter narrowing. Since mild heart disease is classified as <50% narrowing, moderate heart disease is classified as 50-80% narrowing, and severe heart disease is 80-100% narrowing (Cleveland Clinic, (n.d.)). We can bucket the \"num\" values into respective \"mild\", \"moderate\", and \"severe\" classes into a new \"stage\" column. However, due to the class imbalance, we have decided to combine the \"moderate\" and \"severe\" classes into one "moderate to severe" class corresponding to num values of 1-4.; this will result in flagging all the at risk cases in one class. The following table represents how the new \"stage\" column relates to \"num\".\n",
     "\n",
     "| Num value | Percentage blockage | Stage |\n",
     "| -------- | ------- | ----|\n",
@@ -717,11 +717,12 @@
    "id": "cf2c7c66-3c33-45ac-94c2-79445dc3335c",
    "metadata": {},
    "source": [
-    "Carotid artery stenosis: Causes, symptoms and treatment. (n.d.). Cleveland Clinic. https://my.clevelandclinic.org/health/diseases/16845-carotid-artery-disease-carotid-artery-stenosis\n",
+    "Centers for Disease Control and Prevention. (2023, May 15). Heart disease facts. Centers for Disease Control and Prevention. https://www.cdc.gov/heartdisease/facts.htm \n".
+"Cleveland Clinic. (n.d.). Carotid artery stenosis: Causes, symptoms and treatment. https://my.clevelandclinic.org/health/diseases/16845-carotid-artery-disease-carotid-artery-stenosis\n",
     "\n",
-    "Janosi, A., Steinbrunn, W., Pfisterer, M., & Detrano, R. (n.d.). Heart Disease - UCI Machine Learning Repository. UC Irvine Machine Learning Repository. https://archive.ics.uci.edu/dataset/45/heart+disease \n",
+    "Janosi, A., Steinbrunn, W., Pfisterer, M., & Detrano, R. (n.d.). Heart Disease - UCI Machine Learning Repository. UC Irvine Machine Learning Repository. https://archive.ics.uci.edu/dataset/45/heart+disease",
     "\n",
-    "Centers for Disease Control and Prevention. (2023, May 15). Heart disease facts. Centers for Disease Control and Prevention. https://www.cdc.gov/heartdisease/facts.htm "
+    " "
    ]
   }
  ],
