--- a/DSCI100_Group30_Report.ipynb
+++ b/DSCI100_Group30_Report.ipynb
@@ -717,8 +717,8 @@
    "id": "cf2c7c66-3c33-45ac-94c2-79445dc3335c",
    "metadata": {},
    "source": [
-    "Centers for Disease Control and Prevention. (2023, May 15). Heart disease facts. Centers for Disease Control and Prevention. https://www.cdc.gov/heartdisease/facts.htm" "\n",
-"Cleveland Clinic. (n.d.). Carotid artery stenosis: Causes, symptoms and treatment. https://my.clevelandclinic.org/health/diseases/16845-carotid-artery-disease-carotid-artery-stenosis" "\n",
+    "Centers for Disease Control and Prevention. (2023, May 15). Heart disease facts. Centers for Disease Control and Prevention. https://www.cdc.gov/heartdisease/facts.htm", "\n",
+"Cleveland Clinic. (n.d.). Carotid artery stenosis: Causes, symptoms and treatment. https://my.clevelandclinic.org/health/diseases/16845-carotid-artery-disease-carotid-artery-stenosis", "\n",
     "\n",
     "Janosi, A., Steinbrunn, W., Pfisterer, M., & Detrano, R. (n.d.). Heart Disease - UCI Machine Learning Repository. UC Irvine Machine Learning Repository. https://archive.ics.uci.edu/dataset/45/heart+disease",
     "\n",
