--- a/DSCI100_Group30_Report.ipynb
+++ b/DSCI100_Group30_Report.ipynb
@@ -9239,7 +9239,7 @@
     "In summary, we discovered that our model is capable of predicting the severity of heart disease based on several predictors with an accuracy of 65%. When used against the testing set, the model obtained an accuracy of roughly 67.4%. We can infer that the exacting errors made by the model may be due to flaws pertaining to the data set. For example, the data set used throughout this project examined patients specifically from Cleveland and Hungary, giving leeway on the notion that there may not have been enough data to analyze in the first place. With less data in the training set, it may have hindered the model's ability to train the classifier. For future reference, obtaining additional data may have been beneficial or the facilitation of data augmentation. If possible, we could have artificially increased the size of the training data set by producing samples based on existing data, thus allowing the model to generalize in a more effective manner. Furthermore, the model has a relatively low training and cross validation score, we can say that the best way to improve the model would be to increase the complexity of the model, because as of now it's not capturing all the complexity in the dataset. Our visualizations showed that our classifier diagnosed patients with heart disease who tended to have higher levels of cholesterol and higher maximum heart rates. As a result of our work, we determined that individuals of higher ages with high cholesterol, high heart rate and resting blood pressure. This finding worked in consensus with our proposal and research conducted by Rodgers et al and Jung et al. \n",
     "\n",
     "### Expected findings\n",
-    "We expected to find that the model would be able to account for a greater amount of variation in the dataset. One possible reason why it's not doing the best could be because we didn't include all the features or because we simplified the target label (reducing it to binary classification when we could've done multi-class classification). \n",
+    "We expected to find that the model would be able to account for a greater amount of variation in the dataset. One possible reason why it's not doing the best could be because we didn't include all the features or because we simplified the target label (reducing it to binary classification when we could've done multi-class classification). We chose to simplify the classification such that a value in the dataset of 0 meant that the label was mild, and a value of 1-4 meant that the label was moderate to severe; however, we could have also done multiple classes which might have a better accuracy result. Additionally, if we had access to all the features and didn't simplify them during the preprocessing step of the data pipeline, the model might have generalized better to the cross validation data.\n",
     "\n",
     "### Future impact\n",
     "If an effective correlation can be established to diagnose patients with heart disease, individuals may be able to perform the necessary actions to treat their illness. A developed diagnosis pipeline could remove the need for a human doctor, thereby eliminating barriers regarding socioeconomic status and time constraints. Despite the fact that the model is not accurate to an exceptional degree, the development of a complex model with a greater amount of data could benefit the health care community in future time. Early intervention could lead to earlier prevention and treatment. Additionally, having a second automated process to verify diagnoses can help catch missed cases. All of these outcomes may save lives.\n",
@@ -9268,8 +9268,19 @@
     "Cleveland Clinic. (n.d.). Carotid artery stenosis: Causes, symptoms and treatment. https://my.clevelandclinic.org/health/diseases/16845-carotid-artery-disease-carotid-artery-stenosis\n",
     "\n",
     "Janosi, A., Steinbrunn, W., Pfisterer, M., & Detrano, R. (n.d.). Heart Disease - UCI Machine Learning Repository. UC Irvine Machine Learning Repository. https://archive.ics.uci.edu/dataset/45/heart+disease\n",
-    " "
+    "\n",
+    "Jung, E., Kong, S. Y., Ro, Y. S., Ryu, H. H., & Shin, S. D. (2022). Serum Cholesterol Levels and Risk of Cardiovascular Death: A Systematic Review and a Dose-Response Meta-Analysis of Prospective Cohort Studies. International journal of environmental research and public health, 19(14), 8272. https://doi.org/10.3390/ijerph19148272\n",
+    "\n",
+    "Rodgers, J. L., Jones, J., Bolleddu, S. I., Vanthenapalli, S., Rodgers, L. E., Shah, K., Karia, K., & Panguluri, S. K. (2019). Cardiovascular Risks Associated with Gender and Aging. Journal of cardiovascular development and disease, 6(2), 19. https://doi.org/10.3390/jcdd6020019\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44f2c4c4-191b-48cd-9627-4505d483e80e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
