Cutting down word count

--- a/DSCI100_Group30_Report.ipynb
+++ b/DSCI100_Group30_Report.ipynb
@@ -525,7 +525,7 @@
    "metadata": {},
    "source": [
     "Figure 3\\\n",
-    "With all our data in one tibble, we can move on to the actual cleaning. First we see count any null values."
+    "With all our data in one tibble, we can move on to the cleaning. First we count any null values."
    ]
   },
   {
@@ -636,15 +636,7 @@
    "id": "6f402d86-1a93-40a7-a9b5-3407079bc2ab",
    "metadata": {},
    "source": [
-    "This leaves us with 573 rows in the dataset left but this should still be sufficient."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c2f708b9-78be-4421-a458-550a375ac09d",
-   "metadata": {},
-   "source": [
-    "Now, we decided to count the number of observations for each \"num\" category to check for imbalances."
+    "This leaves us with 573 rows in the dataset left but this should still be sufficient. Now, we decided to count the number of observations for each \"num\" category to check for imbalances."
    ]
   },
   {
@@ -1173,7 +1165,7 @@
    "metadata": {},
    "source": [
     "Figure 5\\\n",
-    "Unfortunately, according to figure 5, our dataset is extremely imbalanced. So we created a new class that merges values of num from 1 to 4. \n",
+    "According to figure 5, our dataset is imbalanced. So we created a new class that merges values of num from 1 to 4. \n",
     "\n",
     "According to the data source, values of 0 in the num column represent patients with <50% vessel diameter narrowing while values > 0 in the num column represent patients with >50% vessel diameter narrowing. Since mild heart disease is classified as <50% narrowing, moderate heart disease is classified as 50-80% narrowing, and severe heart disease is 80-100% narrowing (Cleveland Clinic, (n.d.)). We decided to bucket the \"num\" values into the following stages where we had to combine moderate and severe due to the class imbalance.\n",
     "\n",
@@ -1757,7 +1749,7 @@
    "metadata": {},
    "source": [
     "Figure 6\\\n",
-    "By combining the classes, we improve the balance of the classes slightly but not as much as we would like. We will most likely have to upsample when creating the model's recipe."
+    "By combining the classes, we improve the balance of the classes slightly. We will most likely have to upsample when creating the model's recipe."
    ]
   },
   {
@@ -1821,7 +1813,7 @@
    "id": "c9543edb-e7c9-41e1-8690-63672be81ecb",
    "metadata": {},
    "source": [
-    "Splitting our data into training and testing datasets using initial_split will ensure that bias and order were removed. There are 429 rows (75%) in the training set and 144 rows (25%) in the testing set. With this respective proportion, we will have enough data to sufficiently train our model and then utilize the testing set to evaluate its performance on unseen data. "
+    "Splitting our data into training and testing datasets using initial_split will ensure that bias and order were removed. There are 429 rows (75%) in the training set and 144 rows (25%) in the testing set. With this respective proportion, we will have enough data to train our model and then utilize the testing set to evaluate its performance on unseen data. "
    ]
   },
   {
@@ -1957,7 +1949,7 @@
    "metadata": {},
    "source": [
     "Figure 8\\\n",
-    "According to the table above, there is quite a considerable difference in the mean of each predictor for each class. It shows that patients in the \"Moderate/Severe\" stage are older, have a higher resting heart rate, and higher levels of cholesterol but a lower max heart rate while the opposite is true for patients in the \"Mild\" stage."
+    "According to the table above, there is a considerable difference in the mean of each predictor for each class. It shows that patients in the \"Moderate/Severe\" stage are older, have a higher resting heart rate, and higher levels of cholesterol but a lower max heart rate while the opposite is true for patients in the \"Mild\" stage."
    ]
   },
   {
@@ -1966,7 +1958,7 @@
    "metadata": {},
    "source": [
     "### Summarizing and Visualizing the Data\n",
-    "With our training set, we can summarize and visualize our training data to uncover any underlying patterns in relation to our new \"stage\" column. The following code represents a ggpairs plot on our training data set that plots each predictor against each other. "
+    "With our training set, we can summarize and visualize our training data to uncover patterns in relation to our new \"stage\" column. The following code represents a plot on our training data set that plots each predictor against each other. "
    ]
   },
   {
@@ -7866,7 +7858,7 @@
     "tags": []
    },
    "source": [
-    "Looking at the plot above, the accuracy of the model is best when $k$ is roughly 40. "
+    "Visually, the accuracy of the model is best when $k$ is roughly 40. "
    ]
   },
   {
@@ -7944,7 +7936,7 @@
    "metadata": {},
    "source": [
     "Figure 12\\\n",
-    "Our ideal $k$ appears to be 41 with an accuracy of 68%, This $k$ value is saved to a variable called \"best_k\" for use later on."
+    "Our ideal $k$ appears to be 41 with an accuracy of 68%. This $k$ value is saved to a variable called \"best_k\" for later use."
    ]
   },
   {
@@ -8009,7 +8001,7 @@
    "metadata": {},
    "source": [
     "### Testing New Model\n",
-    "Using our new model, we can be assured that it has the ideal $k$ value for diagnosing heart disease."
+    "Using our new model, the ideal $k$ value is being used for diagnosing heart disease."
    ]
   },
   {
@@ -8585,8 +8577,7 @@
    "id": "3e655641-8058-4062-a93c-9213bb90cd41",
    "metadata": {},
    "source": [
-    "Figure 14\\\n",
-    "According to the figure above, there is a lot of cleaning to do."
+    "Figure 14"
    ]
   },
   {
@@ -8675,7 +8666,7 @@
    "metadata": {},
    "source": [
     "Figure 15\\\n",
-    "After removing null values, we can finally evaluate our model on it."
+    "After removing null values, we can evaluate our model. "
    ]
   },
   {
@@ -8762,7 +8753,7 @@
    "metadata": {},
    "source": [
     "Figure 16\\\n",
-    "According to the results above, the model performed very well. We obtained an accuracy of 80% which is much better than the training and testing accuracy obtained earlier. Looking at the classes individually, the model obtained a very high precision of 85% and recall of 91% for the \"Moderate/Severe\" class but the opposite for the \"Mild\" class with a precision of 58% and a recall of 43%."
+    "According to the results above, the model performed well. We obtained an accuracy of 80% which is better than the training and testing accuracy obtained earlier. Looking at the classes individually, the model obtained a high precision of 85% and recall of 91% for the \"Moderate/Severe\" class but the opposite for the \"Mild\" class with a precision of 58% and a recall of 43%."
    ]
   },
   {
@@ -9219,7 +9210,7 @@
    "metadata": {},
    "source": [
     "Figure 17\\\n",
-    "Upon further analysis, these results might have been caused by the severe imbalance of classes in the dataset. Nevertheless, our results suggest that the model is quite versatile at detecting later stage heart disease according to the precision and recall obtained when detecting that class. Whereas the high accuracy is due to the imbalance of classes and the lower number of total observations. "
+    "Upon further analysis, these results might have been caused by the severe imbalance of classes in the dataset. Nevertheless, our results suggest that the model is versatile at detecting later stage heart disease according to the precision and recall obtained when detecting that class. Whereas the high accuracy is due to the imbalance of classes and the lower number of total observations. "
    ]
   },
   {
@@ -9242,7 +9233,7 @@
     "We expected to find that the model would be able to account for a greater amount of variation in the dataset. One possible reason why it's not doing the best could be because we didn't include all the features or because we simplified the target label (reducing it to binary classification when we could've done multi-class classification). We chose to simplify the classification such that a value in the dataset of 0 meant that the label was mild, and a value of 1-4 meant that the label was moderate to severe; however, we could have also done multiple classes which might have a better accuracy result. Additionally, if we had access to all the features and didn't simplify them during the preprocessing step of the data pipeline, the model might have generalized better to the cross validation data.\n",
     "\n",
     "### Future impact\n",
-    "If an effective correlation can be established to diagnose patients with heart disease, individuals may be able to perform the necessary actions to treat their illness. A developed diagnosis pipeline could remove the need for a human doctor, thereby eliminating barriers regarding socioeconomic status and time constraints. Despite the fact that the model is not accurate to an exceptional degree, the development of a complex model with a greater amount of data could benefit the health care community in future time. Early intervention could lead to earlier prevention and treatment. Additionally, having a second automated process to verify diagnoses can help catch missed cases. All of these outcomes may save lives.\n",
+    "If an effective correlation can be established to diagnose patients with heart disease, individuals may be able to perform the necessary actions to treat their illness. A developed diagnosis pipeline could remove the need for a human doctor, thereby eliminating barriers regarding socioeconomic status and time constraints. Despite the fact that the model is not accurate to an exceptional degree, the development of a complex model with a greater amount of data could benefit the health care community in future time. Early intervention could lead to earlier prevention and treatment.\n",
     "\n",
     "### Future questions\n",
     "1. How can we increase the accuracy of the model, and how can this help patients with heart disease?\n",
